--- a/index.html
+++ b/index.html
@@ -25,33 +25,33 @@
 </div>
 <div class="part2">
 	 <div class="ratings rating1">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
   <p>Rated 5 Stars in Reviews</p>
 </div>
   <div class="ratings rating2">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
     <p>Rated 5 Stars in Report Guru</p>
 </div>
  <div class="ratings rating3">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
-  <img src="images/icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
+  <img src="icon-star.svg" alt="">
     <p>Rated 5 Stars in BestTech</p>
 </div>
 </div>   
 <div class="part3">
 		<div class="reviews review1">
-			<img src="images/image-colton.jpg" alt="colton">
+			<img src="image-colton.jpg" alt="colton">
     <h5>Colton Smith<br>
     <span>Verified Buyer</span></h5>
    <p> "We needed the same printed design as the one we had ordered a week prior.
@@ -59,14 +59,14 @@
     Excellent!"</p>
   </div>
   <div class="reviews review2">
-  <img src="images/image-irene.jpg" alt="">
+  <img src="image-irene.jpg" alt="">
     <h5>Irene Roberts<br>
     <span>Verified Buyer</span></h5>
    <p>"Customer service is always excellent and very quick turn around. Completely
     delighted with the simplicity of the purchase and the speed of delivery."</p>
   </div>
   <div class="reviews review3">
-   <img src="images/image-anne.jpg" alt="">
+   <img src="image-anne.jpg" alt="">
     <h5>Anne Wallace<br>
     <span>Verified Buyer</span></h5>
     <p>"Put an order with this company and can only praise them for the very high
